--- a/practica-3/extra/style-p3-article.css
+++ b/practica-3/extra/style-p3-article.css
@@ -1,7 +1,3 @@
-/*body {
-	background-image: url(http://www.katawa-shoujo.com/res/mainbg.png);
-}*/
-
 h1 {
 	color: black;
 	text-shadow: -1.5px 0 #FFFFFF, 0 1.5px #FFFFFF, 1.5px 0 #FFFFFF, 0 -1.5px #FFFFFF;
@@ -30,7 +26,7 @@ a {
 }
 
 a:link    {color:#1A0DAB; background-color:transparent; text-decoration:none}
-a:visited {color:#660099; background-color:transparent; text-decoration:none}
+a:visited {color:#1A0DAB; background-color:transparent; text-decoration:none}
 a:hover   {background-color:transparent; text-decoration:underline}
 a:active  {color:#1A0DAB; background-color:transparent; text-decoration:underline}
 
@@ -41,9 +37,13 @@ h3 {
 	font-size: 18px;
 }
 
-img {
-	margin-left: 20px;
-}
+img {border-radius: 8px; border: 1px solid #DDD;}
+
+/*img {
+    border: 1px solid #DDD;
+    border-radius: 4px;
+    padding: 5px;
+} */
 
 ul {
 	color: black;
@@ -57,22 +57,6 @@ ul {
 	margin-left: 20px;
 }
 
-.quote {
-	color: darkblue;
-	text-align: center;
-	font-family: "Times New Roman";
-	font-size: 28px;
-}
-
-.main_quote {
-	color: darkblue;
-	text-align: center;
-	font-family: "Times New Roman";
-	font-size: 18px;
-	margin-right: 20px;
-	margin-left: 20px;
-}
-
 .button {
 	margin-left: 50px;
 	margin-bottom: 20px;
@@ -80,4 +64,10 @@ ul {
 
 .footer {
 	bottom: 0;
+}
+
+.list {
+	font-family: verdana;
+	font-size: 20px;
+	text-align: justify;
 }
