--- a/practica-3/extra/style-p3-article.css
+++ b/practica-3/extra/style-p3-article.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 h1 {
 	color: black;
 	text-shadow: -1.5px 0 #FFFFFF, 0 1.5px #FFFFFF, 1.5px 0 #FFFFFF, 0 -1.5px #FFFFFF;
@@ -71,7 +70,7 @@ ul {
 	font-family: verdana;
 	font-size: 20px;
 	text-align: justify;
-=======
+}
 h1 {
 	color: black;
 	text-shadow: -1.5px 0 #FFFFFF, 0 1.5px #FFFFFF, 1.5px 0 #FFFFFF, 0 -1.5px #FFFFFF;
@@ -144,5 +143,4 @@ ul {
 	font-family: verdana;
 	font-size: 20px;
 	text-align: justify;
->>>>>>> origin/master
 }
