--- a/practica-9/extra/style-p9.css
+++ b/practica-9/extra/style-p9.css
@@ -1,5 +1,5 @@
 body {
-	background: url("../extra/.jpg") no-repeat fixed center;
+	background: url("../extra/bg4.jpg") no-repeat fixed center;
 	background-size: cover;
 }
 
